# open-sessionbar

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  release-plz.toml
.github/: SMOKE_ACTIONS
.github/workflows/: ci.yml  manual-version-bump.yml  release.yml
contrib/eww/: README.md
contrib/i3blocks/: README.md
contrib/polybar/: README.md
contrib/tmux/: README.md
contrib/waybar/: README.md
docs/: INSTALL.md  PROTOCOL.md
plugin/: README.md  package.json  server.ts  snapshot.ts  store.ts  tsconfig.json  tui.tsx
plugin/tests/: server.test.ts  snapshot.test.ts
scripts/: spinners.py  test-spinners.sh
src/: client.rs  install.rs  main.rs  model.rs  spinner.rs  tui.rs
src/format/: eww.rs  i3blocks.rs  json.rs  mod.rs  plain.rs  polybar.rs  tmux.rs  waybar.rs
tests/: format.rs
