[package]
name = "open-sessionbar"
version = "0.1.0"
description = "Desktop-agnostic OpenCode session monitor: status-bar module (waybar/i3blocks/polybar/eww) + live TUI, fed by an embedded OpenCode plugin"
edition = "2021"
license = "MIT"
authors = ["Grok Insider <admin@grokinsider.net>"]
repository = "https://github.com/grok-insider/open-sessionbar"

[[bin]]
name = "opensessions"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"
dirs = "5"
libc = "0.2"

[dev-dependencies]
serde_json = "1"

[profile.release]
opt-level = 2
strip = true
